--- a/recruitment.html
+++ b/recruitment.html
@@ -504,6 +504,7 @@
         <button>查看更多</button>
       </div>
     </div>
+    <!-- 互联网热门公司 -->
     <div id="hot-company">
       <div class="title-box">
         <p class="company-title">互联网热门公司榜</p>
@@ -552,10 +553,7 @@
           <div class="com-cont">
             <div class="box-top">
               <a href="https://www.lagou.com/gongsi/66398.html">
-                <img
-                  src="../recruitment/img/student.com.jpg"
-                  alt=""
-                />
+                <img src="../recruitment/img/student.com.jpg" alt="" />
               </a>
               <a href="https://www.lagou.com/gongsi/66398.html">
                 <p class="com-name">Student.com</p>
@@ -591,13 +589,10 @@
           <div class="com-cont">
             <div class="box-top">
               <a href="https://www.lagou.com/gongsi/59251.html">
-                <img
-                  src="../recruitment/img/yingke.jpg"
-                  alt=""
-                />
+                <img src="../recruitment/img/yingke.jpg" alt="" />
               </a>
               <a href="https://www.lagou.com/gongsi/59251.html">
-                <p class="com-name">映客 </p>
+                <p class="com-name">映客</p>
               </a>
               <p class="com-class">文化 | 内容 / 上市公司</p>
               <p class="com-explain">
@@ -630,10 +625,7 @@
           <div class="com-cont">
             <div class="box-top">
               <a href="https://www.lagou.com/gongsi/67197.html">
-                <img
-                  src="../recruitment/img/kaisi.jpg"
-                  alt=""
-                />
+                <img src="../recruitment/img/kaisi.jpg" alt="" />
               </a>
               <a href="https://www.lagou.com/gongsi/67197.html">
                 <p class="com-name">开思时代</p>
@@ -668,35 +660,32 @@
         <div class="com-boxes">
           <div class="com-cont">
             <div class="box-top">
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <img
-                  src="../recruitment/img/CgotOVzxFqCAedwfAAAtOxHRS_0737.png"
-                  alt=""
-                />
+              <a href="https://www.lagou.com/gongsi/61875.html">
+                <img src="../recruitment/img/shejiyuan.jpg" alt="" />
               </a>
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <p class="com-name">即刻</p>
+              <a href="https://www.lagou.com/gongsi/61875.html">
+                <p class="com-name">设计院</p>
               </a>
-              <p class="com-class">移动互联网 / C轮</p>
+              <p class="com-class">移动互联网,金融 / 上市公司</p>
               <p class="com-explain">
-                即刻,年轻人的兴趣社区|记录我,遇见你.加入即刻=有口皆碑的产品+硅谷氛围+年轻团队+超棒福利
+                国家规划布局内重点软件企业、广东省创新型试点企业、广州市重点软件企业
               </p>
             </div>
             <div class="box-bottom">
               <div class="bottom-left">
-                <a href="https://www.lagou.com/gongsi/i58635.html">
-                  <p class="left-num">20</p>
+                <a href="https://www.lagou.com/gongsi/i61875.html">
+                  <p class="left-num">53</p>
                   <p class="left-text">面试评价</p>
                 </a>
               </div>
               <div class="bottom-middle">
-                <a href="https://www.lagou.com/gongsi/j58635.html">
-                  <p class="middle-num">10</p>
+                <a href="https://www.lagou.com/gongsi/j61875.html">
+                  <p class="middle-num">29</p>
                   <p class="middle-text">在招职位</p>
                 </a>
               </div>
               <div class="bottom-right">
-                <a href="https://www.lagou.com/gongsi/58635.html">
+                <a href="https://www.lagou.com/gongsi/61875.html">
                   <p class="right-num">100%</p>
                   <p class="right-text">简历处理率</p>
                 </a>
@@ -707,35 +696,32 @@
         <div class="com-boxes">
           <div class="com-cont">
             <div class="box-top">
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <img
-                  src="../recruitment/img/CgotOVzxFqCAedwfAAAtOxHRS_0737.png"
-                  alt=""
-                />
+              <a href="https://www.lagou.com/gongsi/54974.html">
+                <img src="../recruitment/img/winshare.png" alt="" />
               </a>
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <p class="com-name">即刻</p>
+              <a href="https://www.lagou.com/gongsi/54974.html">
+                <p class="com-name">文轩在线</p>
               </a>
-              <p class="com-class">移动互联网 / C轮</p>
+              <p class="com-class">电商 / 不需要融资</p>
               <p class="com-explain">
-                即刻,年轻人的兴趣社区|记录我,遇见你.加入即刻=有口皆碑的产品+硅谷氛围+年轻团队+超棒福利
+                文轩网：您网上的新华书店！
               </p>
             </div>
             <div class="box-bottom">
               <div class="bottom-left">
-                <a href="https://www.lagou.com/gongsi/i58635.html">
-                  <p class="left-num">20</p>
+                <a href="https://www.lagou.com/gongsi/i54974.html">
+                  <p class="left-num">73</p>
                   <p class="left-text">面试评价</p>
                 </a>
               </div>
               <div class="bottom-middle">
-                <a href="https://www.lagou.com/gongsi/j58635.html">
-                  <p class="middle-num">10</p>
+                <a href="https://www.lagou.com/gongsi/j54974.html">
+                  <p class="middle-num">22</p>
                   <p class="middle-text">在招职位</p>
                 </a>
               </div>
               <div class="bottom-right">
-                <a href="https://www.lagou.com/gongsi/58635.html">
+                <a href="https://www.lagou.com/gongsi/54974.html">
                   <p class="right-num">100%</p>
                   <p class="right-text">简历处理率</p>
                 </a>
@@ -746,35 +732,32 @@
         <div class="com-boxes">
           <div class="com-cont">
             <div class="box-top">
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <img
-                  src="../recruitment/img/CgotOVzxFqCAedwfAAAtOxHRS_0737.png"
-                  alt=""
-                />
+              <a href="https://www.lagou.com/gongsi/66541.html">
+                <img src="../recruitment/img/yunlaiwu.png" alt="" />
               </a>
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <p class="com-name">即刻</p>
+              <a href="https://www.lagou.com/gongsi/66541.html">
+                <p class="com-name">云莱坞</p>
               </a>
-              <p class="com-class">移动互联网 / C轮</p>
+              <p class="com-class">移动互联网,文娱 | 内容 / A轮</p>
               <p class="com-explain">
-                即刻,年轻人的兴趣社区|记录我,遇见你.加入即刻=有口皆碑的产品+硅谷氛围+年轻团队+超棒福利
+                互联网+娱乐工业4.0
               </p>
             </div>
             <div class="box-bottom">
               <div class="bottom-left">
-                <a href="https://www.lagou.com/gongsi/i58635.html">
-                  <p class="left-num">20</p>
+                <a href="https://www.lagou.com/gongsi/i66541.html">
+                  <p class="left-num">38</p>
                   <p class="left-text">面试评价</p>
                 </a>
               </div>
               <div class="bottom-middle">
-                <a href="https://www.lagou.com/gongsi/j58635.html">
-                  <p class="middle-num">10</p>
+                <a href="https://www.lagou.com/gongsi/j66541.html">
+                  <p class="middle-num">7</p>
                   <p class="middle-text">在招职位</p>
                 </a>
               </div>
               <div class="bottom-right">
-                <a href="https://www.lagou.com/gongsi/58635.html">
+                <a href="https://www.lagou.com/gongsi/66541.html">
                   <p class="right-num">100%</p>
                   <p class="right-text">简历处理率</p>
                 </a>
@@ -785,47 +768,166 @@
         <div class="com-boxes">
           <div class="com-cont">
             <div class="box-top">
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <img
-                  src="../recruitment/img/CgotOVzxFqCAedwfAAAtOxHRS_0737.png"
-                  alt=""
-                />
+              <a href="https://www.lagou.com/gongsi/59044.html">
+                <img src="../recruitment/img/kangyu.png" alt="" />
               </a>
-              <a href="https://www.lagou.com/gongsi/58635.html">
-                <p class="com-name">即刻</p>
+              <a href="https://www.lagou.com/gongsi/59044.html">
+                <p class="com-name">康语</p>
               </a>
-              <p class="com-class">移动互联网 / C轮</p>
+              <p class="com-class">电商,医疗|健康 / A轮</p>
               <p class="com-explain">
-                即刻,年轻人的兴趣社区|记录我,遇见你.加入即刻=有口皆碑的产品+硅谷氛围+年轻团队+超棒福利
+                就医优选,源自康语
               </p>
             </div>
             <div class="box-bottom">
               <div class="bottom-left">
-                <a href="https://www.lagou.com/gongsi/i58635.html">
-                  <p class="left-num">20</p>
+                <a href="https://www.lagou.com/gongsi/i59044.html">
+                  <p class="left-num">6</p>
                   <p class="left-text">面试评价</p>
                 </a>
               </div>
               <div class="bottom-middle">
-                <a href="https://www.lagou.com/gongsi/j58635.html">
+                <a href="https://www.lagou.com/gongsi/j59044.html">
                   <p class="middle-num">10</p>
                   <p class="middle-text">在招职位</p>
                 </a>
               </div>
               <div class="bottom-right">
-                <a href="https://www.lagou.com/gongsi/58635.html">
+                <a href="https://www.lagou.com/gongsi/59044.html">
                   <p class="right-num">100%</p>
                   <p class="right-text">简历处理率</p>
                 </a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="more">
+        <button>查看更多</button>
+      </div>
+    </div>
+    <!-- 友情链接 -->
+    <div id="friend-link">
+      <div class="link-box">
+        <p class="link-title">
+          友情链接
+        </p>
+      </div>
+      <div class="link-cont">
+        <a href="#"> <p>拉勾网</p> </a>
+        <a href="#"> <p>教师网</p> </a>
+        <a href="#"> <p>招聘</p> </a>
+        <a href="#"> <p>app下载</p> </a>
+        <a href="#"> <p>求职网站</p> </a>
+        <a href="#"> <p>java课</p> </a>
+        <a href="#"> <p>架构课</p> </a>
+        <a href="#"> <p>招聘系统</p> </a>
+        <a href="#"> <p>中大网校</p> </a>
+        <a href="#"> <p>教师招聘</p> </a>
+        <a href="#"> <p>人人都是产品经理</p> </a>
+        <a href="#"> <p>新疆人才网</p> </a>
+        <a href="#"> <p>研究报告</p> </a>
+        <a href="#"> <p>互联网的一些事</p> </a>
+        <a href="#"> <p>人才招聘网</p> </a>
+        <a href="#"> <p>互联网的一些事</p> </a>
+        <a href="#"> <p>人才招聘网</p> </a>
+        <a href="#"> <p>找工作</p> </a>
+        <a href="#"> <p>中国考试网</p> </a>
+        <a href="#"> <p>生意经商业百科</p> </a>
+        <a href="#"> <p>装修效果图</p> </a>
+        <a href="#"> <p>招聘网</p> </a>
+        <a href="#"> <p>中华考试网</p> </a>
+        <a href="#"> <p>杭州招聘</p> </a>
+        <a href="#"> <p>上海招聘</p> </a>
+        <a href="#"> <p>法律咨询</p> </a>
+        <a href="#"> <p>徐州英才网</p> </a>
+        <a href="#"> <p>考研网</p> </a>
+        <a href="#"> <p>语文学习网</p> </a>
+        <a href="#"> <p>智联招聘</p> </a>
+        <a href="#"> <p>职业圈</p> </a>
+        <a href="#"> <p>股城财经</p> </a>
+        <a href="#"> <p>法律资讯网</p> </a>
+        <a href="#"> <p>招聘网</p> </a>
+        <a href="#"> <p>爱问共享资料</p> </a>
+        <a href="#"> <p>百姓网</p> </a>
+        <a href="#"> <p>招聘</p> </a>
+        <a href="#"> <p>会计网</p> </a>
+        <a href="#"> <p>服装人才网</p> </a>
+        <a href="#"> <p>创意服务外包</p> </a>
+        <a href="#"> <p>西陆军事</p> </a>
+        <a href="#"> <p>中公公务员网校</p> </a>
+        <a href="#"> <p>找工作</p> </a>
+        <a href="#"> <p>招聘网</p> </a>
+        <a href="#"> <p>前瞻网</p> </a>
+        <a href="#"> <p>安徽招聘网</p> </a>
+        <a href="#"> <p>台州人才网</p> </a>
+        <a href="#"> <p>教师网</p> </a>
+        <a href="#"> <p>苏州人才网</p> </a>
+        <a href="#"> <p>教师网</p> </a>
+        <a href="#"> <p>重庆人才网</p> </a>
+        <a href="#"> <p>中国会计网</p> </a>
+        <a href="#"> <p>齐鲁人才网</p> </a>
+        <a href="#"> <p>邮编生活网</p> </a>
+        <a href="#"> <p>义乌人才网</p> </a>
+        <a href="#"> <p>培训网</p> </a>
+      </div>
+      <span class="extend">展开 <i></i> </span>
+    </div>
+    <div class="footer-line"></div>
+    <!-- 底部信息 -->
+    <div id="footer">
+      <div class="footer-left">
+        <div class="footer-app">
+          <button><span></span>下载拉钩APP</button>
+        </div>
+        <div class="footer-miniapp">
+          <button><span></span>微信小程序</button>
+        </div>
+        <div class="contact">
+          <span></span><span class="weixin">拉钩微信</span> <span></span
+          ><span class="weibo">拉钩微博</span>
+        </div>
+      </div>
+      <div class="footer-right">
+        <div class="serve">
+          <div class="serve-title">
+            企业服务
+          </div>
+          <div class="serve-cont">
+            <a href="#"><p>招聘抢人宝典</p></a>
+            <a href="#"><p>公司搜索</p></a>
+            <a href="#"><p>拉钩APP</p></a>
+          </div>
+        </div>
+        <div class="serve">
+          <div class="serve-title">
+            用户帮助
+          </div>
+          <div class="serve-cont">
+            <a href="#"><p>帮助中心</p></a>
+            <a href="#"><p>用户服务协议</p></a>
+            <a href="#"><p>隐私政策</p></a>
+            <a href="#"><p>在线提问</p></a>
+          </div>
+        </div>
+        <div class="serve">
+          <div class="serve-title">
+            联系方式
+          </div>
+          <div class="serve-cont">
+            <p>服务热线： 40062828 35(9:00-18:00)</p>
+            <a href="#"><p>企业服务邮箱：cc@lagou.com</p></a>
+            <a href="#"><p>联系我们</p></a>
           </div>
         </div>
         
+        <!-- <div class="userhelp"></div>
+        <div class="contact"></div> -->
       </div>
     </div>
-    <div id="footer">
-      some footer info
+    <!-- copyright -->
+    <div id="copyright">
+      
     </div>
   </body>
 </html>
