--- a/recruitment.html
+++ b/recruitment.html
@@ -878,14 +878,26 @@
     <div id="footer">
       <div class="footer-left">
         <div class="footer-app">
-          <button><span></span>下载拉钩APP</button>
+          <a href="#">
+            <button><span></span>下载拉钩APP</button>
+          </a>
         </div>
         <div class="footer-miniapp">
-          <button><span></span>微信小程序</button>
+          <button>
+            <span></span>
+            微信小程序
+            <img src="./img/lagou-mina-code_d70848a.png" alt="" class="mina" />
+          </button>
+          <!-- 添加hover图标 -->
         </div>
         <div class="contact">
-          <span></span><span class="weixin">拉钩微信</span> <span></span
-          ><span class="weibo">拉钩微博</span>
+          <a href=""> 
+            <span></span><span class="weixin">拉钩微信
+
+              <img src="./img/lg_pic_weixin@2x_c372698.png" alt="" class="weixin-pic">
+            </span>
+          </a>
+          <a href=""> <span></span><span class="weibo">拉钩微博</span> </a>
         </div>
       </div>
       <div class="footer-right">
@@ -920,14 +932,24 @@
             <a href="#"><p>联系我们</p></a>
           </div>
         </div>
-        
+
         <!-- <div class="userhelp"></div>
         <div class="contact"></div> -->
       </div>
     </div>
     <!-- copyright -->
     <div id="copyright">
-      
+      <div class="copyright-cont">
+        <span class="copyright-title">©2018 拉勾网</span>
+        <span class="beian"> <a href="#" >京ICP备14023790号-2</a> </span>
+        <span></span> <span class="beian-info"> <a href="#">京公网安备 11010802024043号</a> </span>
+        <div class="police">
+          <p>违法和不良信息举报</p>
+          <p>电话: 4006 2828 35</p>
+          <p>邮箱: cc@lagou.com</p>
+        </div>
+      </div>
     </div>
+    <div class="gotop"></div>
   </body>
 </html>
